Fixed introduction paragraph glitch
now it won't break when it's too small

--- a/css/1.css
+++ b/css/1.css
@@ -120,6 +120,7 @@ li {
 
 .introduction {
 	font-family:Helvetica, Arial, sans-serif;
+	min-height:85px;
 	line-height:20px;
 	font-size:12px;
 	color:#99B198;
@@ -128,7 +129,6 @@ li {
 	background-position:bottom left;
 	padding-left:0;
 	padding-right:200px;
-	padding-bottom:35px;
 	padding-top:0;
 	background-repeat:no-repeat;
 
